# py-tv-guide

./: README.md  pyproject.toml  tv_guide.yaml
py_tv_guide/: __init__.py  __main__.py  __version__.py  epg.py  logging.py  logging.yaml  main.py
py_tv_guide/downloader/: __init__.py
py_tv_guide/sites/: __init__.py  programtv_ru.py
tests/: __init__.py  test_programmtv_ru.py
